--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,10 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@ai-sdk/google": "^3.0.10",
     "@clack/prompts": "^0.11.0",
     "@prisma/client": "^5.22.0",
+    "ai": "^6.0.39",
     "better-auth": "^1.4.7",
     "boxen": "^8.0.1",
     "chalk": "^5.6.2",
